{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 14,
  "lineage": "46655862-66e4-f942-8e75-c7b2770fe851",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.229.132.194",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-12T09:30:09.816-07:00",
            "id": "projects/adept-turbine-339912/regions/asia-east1/addresses/app-static-ip",
            "name": "app-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "adept-turbine-339912",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/regions/asia-east1/addresses/app-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-12T09:30:30.913-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adept-turbine-339912/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/global/networks/app-network",
            "priority": 1000,
            "project": "adept-turbine-339912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-allowed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-12T09:30:30.896-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adept-turbine-339912/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/global/networks/app-network",
            "priority": 1000,
            "project": "adept-turbine-339912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-allowed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250701",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/zones/asia-east1-b/disks/my-app-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/adept-turbine-339912/zones/asia-east1-b/instances/my-app-vm",
            "instance_id": "124812603093364864",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDAQVEhumV8+I8cfz/sspQLYCYefhb0jt89KoOrdpuDrp1NcJtm7QwdFw9suP2+GbT39+WJv8jCplrQmrPeiQDmACLpMjFLVZv2O0CG3XOiNRxtKbePE1wiXuCcChf5jec491YXaaElnBdA7r+vd/W8BUcAURd8wLdbdpDXi83ihO3c3WJiOoNt7oXjLGBXDeJrF/h/G5Hsg3rbuRszae9NY3U/G7NCBRBDLYqtBBGHLh+k8hOGwac191GRgOWbCTa4ApoV/tQueltqJ7bvMGG7uuom7ljQfB4FybEbepAE4rQ9JkJdCKFTOyUw4rTS68tV1qdsjBWiDKW2x4ThsS/rdus26HQ/KreKf+C1xC6Q8kUwOvK7FthNqJBDzhCAaVs/ewAz1/HW5y+6Cx6LLU7gZmxnpnIdF1mR7WCAsi/BmY [...]
            },
            "metadata_fingerprint": "ecOtMpzGlMY=",
            "metadata_startup_script": "#!/bin/bash\n\n# 更新系統\napt-get update\napt-get upgrade -y\n\n# 安裝基本工具\napt-get install -y curl wget unzip vim htop git\n\n# 安裝 Docker\ncurl -fsSL https://get.docker.com -o get-docker.sh\nsh get-docker.sh\nusermod -aG docker ubuntu\n\n# 安裝 Docker Compose\ncurl -L \"https://github.com/docker/compose/releases/download/v2.20.0/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\nchmod +x /usr/local/bin/docker-compose\n\n# 安裝 Python 和 pip\ [...]
            "name": "my-app-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.229.132.194",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/global/networks/app-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/regions/asia-east1/subnetworks/app-subnet",
                "subnetwork_project": "adept-turbine-339912"
              }
            ],
            "project": "adept-turbine-339912",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/zones/asia-east1-b/instances/my-app-vm",
            "service_account": [
              {
                "email": "vm-service-account@adept-turbine-339912.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-allowed",
              "ssh-allowed"
            ],
            "tags_fingerprint": "ISPNag0qEAs=",
            "zone": "asia-east1-b"
          },
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.vm_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/adept-turbine-339912/global/networks/app-network",
            "mtu": 0,
            "name": "app-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "adept-turbine-339912",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/global/networks/app-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-12T09:30:31.314-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/adept-turbine-339912/regions/asia-east1/subnetworks/app-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/global/networks/app-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "adept-turbine-339912",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-turbine-339912/regions/asia-east1/subnetworks/app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}